--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>sample</title>
-    <script src=./index.js></script> 
+    <script src=./dist/js/app.js></script> 
     <script>
         window.onload = function() {
             var h = require('hyperscript');        
@@ -17,7 +17,7 @@
 
             // moduleで公開したh()を呼び出す。
             // const h = require("hyperscript"); html側で呼び出せない。browserifyできないため。
-            const h = appModule.h; //exportしたfunctionを変数に設定
+            //const h = appModule.h; //exportしたfunctionを変数に設定
             root.appendChild(
                 h("ul", {}, 
                     [h("li", "list1"),h("li", "list2"),h("li", "list3")]
